onAppeat is fixed
fixes the onAppeat midufuer in Idealweight

--- a/BMI_Remastered/Translations/Localizable.xcstrings
+++ b/BMI_Remastered/Translations/Localizable.xcstrings
@@ -173,6 +173,17 @@
         }
       }
     },
+    "Calculate your Idealweight" : {
+      "extractionState" : "stale",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Berechne dein Idealgewicht"
+          }
+        }
+      }
+    },
     "Cancel" : {
       "localizations" : {
         "de" : {
