App wird wieder gebaut ^^
allles soweit gefixed bis auf die zulangen Strings und die Funktionen habe ich auch nnoch nicht bearbeitet

--- a/BMI_Remastered/Translations/Localizable.xcstrings
+++ b/BMI_Remastered/Translations/Localizable.xcstrings
@@ -311,6 +311,7 @@
       }
     },
     "Body mass index BMI is a measure of body fat based on height and weight that applies to" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -598,6 +599,7 @@
       }
     },
     "Female" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -640,6 +642,7 @@
       }
     },
     "HealthMetrics" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -750,6 +753,7 @@
       }
     },
     "Male" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
