--- a/BMI_Remastered/Translations/Localizable.xcstrings
+++ b/BMI_Remastered/Translations/Localizable.xcstrings
@@ -7,6 +7,16 @@
     "%@" : {
 
     },
+    "%@ %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@"
+          }
+        }
+      }
+    },
     "%@ cm" : {
 
     },
@@ -372,6 +382,9 @@
         }
       }
     },
+    "Can't send Mail from this Device." : {
+
+    },
     "Cancel" : {
       "localizations" : {
         "de" : {
@@ -424,6 +437,9 @@
           }
         }
       }
+    },
+    "Contact the Support" : {
+
     },
     "Darkmode" : {
       "localizations" : {
@@ -527,6 +543,9 @@
           }
         }
       }
+    },
+    "Device:" : {
+
     },
     "Diary" : {
       "localizations" : {
@@ -856,6 +875,9 @@
         }
       }
     },
+    "OS and Version:" : {
+
+    },
     "Overview" : {
       "localizations" : {
         "de" : {
@@ -906,6 +928,9 @@
         }
       }
     },
+    "Please send us an email if you have any problems or ideas for new features." : {
+
+    },
     "Save" : {
       "localizations" : {
         "de" : {
@@ -935,6 +960,9 @@
           }
         }
       }
+    },
+    "Send Mail" : {
+
     },
     "Settings" : {
       "localizations" : {
@@ -981,7 +1009,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Zeige mir meine BMI's"
+            "value" : "Zeige meine BMI's"
           }
         }
       }
