--- a/BMI_Remastered/Translations/Localizable.xcstrings
+++ b/BMI_Remastered/Translations/Localizable.xcstrings
@@ -620,6 +620,24 @@
         }
       }
     },
+    "Export BAI" : {
+
+    },
+    "Export Bodydetails to PDF" : {
+
+    },
+    "Export both" : {
+
+    },
+    "Export Data to PDF" : {
+
+    },
+    "Exprt BMI" : {
+
+    },
+    "Exprt Bodydetails to PDF" : {
+
+    },
     "Female" : {
       "extractionState" : "stale",
       "localizations" : {
