--- a/BMI_Remastered/Translations/Localizable.xcstrings
+++ b/BMI_Remastered/Translations/Localizable.xcstrings
@@ -837,6 +837,9 @@
         }
       }
     },
+    "Meaning of my BAI" : {
+
+    },
     "Meaning of my BMI" : {
       "localizations" : {
         "de" : {
